@@ -256,21 +256,40 @@ this repository contains the full copyright notices and license terms. -->
             <field name="act_window" ref="act_product_quantities_warehouse"/>
         </record>
 
+        <record model="ir.rule.group" id="rule_group_product_quantities_warehouse">
+            <field name="name">User in company</field>
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse')]"/>
+            <field name="global_p" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_product_quantities_warehouse">
+            <field
+                name="domain"
+                eval="[('company', '=', Eval('user', {}).get('company', None))]"
+                pyson="1"/>
+            <field name="rule_group" ref="rule_group_product_quantities_warehouse"/>
+        </record>
+
+        <record model="ir.model.access" id="access_product_quantities_warehouse">
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse')]"/>
+            <field name="perm_read" eval="False"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_product_quantities_warehouse_group_stock">
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse')]"/>
+            <field name="group" ref="group_stock"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+
         <record model="ir.ui.view" id="product_quantities_warehouse_context_view_form">
             <field
                 name="model">stock.product_quantities_warehouse.context</field>
             <field name="type">form</field>
             <field name="name">product_quantities_warehouse_context_form</field>
-        </record>
-
-        <record model="ir.action.wizard" id="wizard_open_product_quantities_by_warehouse">
-            <field name="name">Stock Moves</field>
-            <field name="wiz_name">stock.product_quantities_warehouse.open</field>
-        </record>
-        <record model="ir.action.keyword" id="wizard_open_product_quantities_by_warehouse_keyword1">
-            <field name="keyword">tree_open</field>
-            <field name="model">stock.product_quantities_warehouse,-1</field>
-            <field name="action" ref="wizard_open_product_quantities_by_warehouse"/>
         </record>
 
         <record model="ir.action.keyword"
@@ -289,6 +308,82 @@ this repository contains the full copyright notices and license terms. -->
             id="act_product_quantities_warehouse-group_stock">
             <field name="action" ref="act_product_quantities_warehouse"/>
             <field name="group" ref="group_stock"/>
+        </record>
+
+        <record model="ir.action.wizard" id="wizard_open_product_quantities_by_warehouse">
+            <field name="name">Stock Moves</field>
+            <field name="wiz_name">stock.product_quantities_warehouse.open</field>
+        </record>
+        <record model="ir.action.keyword" id="wizard_open_product_quantities_by_warehouse_keyword1">
+            <field name="keyword">tree_open</field>
+            <field name="model">stock.product_quantities_warehouse,-1</field>
+            <field name="action" ref="wizard_open_product_quantities_by_warehouse"/>
+        </record>
+
+        <record model="ir.ui.view" id="product_quantities_warehouse_move_view_list">
+            <field name="model">stock.product_quantities_warehouse.move</field>
+            <field name="type">tree</field>
+            <field name="name">product_quantities_warehouse_move_list</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_product_quantities_warehouse_move">
+            <field name="name">Stock Moves By Warehouse</field>
+            <field name="res_model">stock.product_quantities_warehouse.move</field>
+            <field
+                name="context"
+                eval="If(Eval('active_model') == 'product.template', {'product_template': Eval('active_id')}, {'product': Eval('active_id')})"
+                pyson="1"/>
+            <field name="search_value" eval="[('date', '>=', Date())]" pyson="1"/>
+            <field name="context_model">stock.product_quantities_warehouse.context</field>
+        </record>
+        <record model="ir.action.act_window.view" id="act_product_quantities_warehouse_move_list_view">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="product_quantities_warehouse_move_view_list"/>
+            <field name="act_window" ref="act_product_quantities_warehouse_move"/>
+        </record>
+
+        <record model="ir.action.keyword" id="act_product_quantities_warehouse_move_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">product.product,-1</field>
+            <field name="action" ref="act_product_quantities_warehouse_move"/>
+        </record>
+        <record model="ir.action.keyword" id="act_product_quantities_warehouse_move_keyword2">
+            <field name="keyword">form_relate</field>
+            <field name="model">product.template,-1</field>
+            <field name="action" ref="act_product_quantities_warehouse_move"/>
+        </record>
+        <record model="ir.action-res.group" id="act_product_quantities_warehouse_move-group_stock">
+            <field name="action" ref="act_product_quantities_warehouse_move"/>
+            <field name="group" ref="group_stock"/>
+        </record>
+
+        <record model="ir.rule.group" id="rule_group_product_quantities_warehouse_move">
+            <field name="name">User in company</field>
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse.move')]"/>
+            <field name="global_p" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_product_quantities_warehouse_move">
+            <field
+                name="domain"
+                eval="[('company', '=', Eval('user', {}).get('company', None))]"
+                pyson="1"/>
+            <field name="rule_group" ref="rule_group_product_quantities_warehouse_move"/>
+        </record>
+
+        <record model="ir.model.access" id="access_product_quantities_warehouse_move">
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse.move')]"/>
+            <field name="perm_read" eval="False"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_product_quantities_warehouse_move_group_stock">
+            <field name="model" search="[('model', '=', 'stock.product_quantities_warehouse.move')]"/>
+            <field name="group" ref="group_stock"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
         </record>
     </data>
 </tryton>
